Fix page background
Previously page background (purple) will only be present until the
content ends, meaning it may not cover the entire screen for
longer/portrait devices

--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -2,8 +2,9 @@
 
 .home {
 	display: flex;
+	min-height: 100vh;
 	justify-content: center;
-  	background-color: #6B6477
+  	background-color: #6B6477;
 }
 
 .body {
