--- a/src/pages/guide.css
+++ b/src/pages/guide.css
@@ -1,7 +1,8 @@
 .page {
 	display: flex;
+	min-height: 100vh;
 	justify-content: center;
-  	background-color: #6B6477
+  	background-color: #6B6477;
 }
 
 .body {
